# project/schemas.py
@@ -2,11 +2,15 @@ from pydantic import BaseModel
 
 # Create models
 class DeleteRequest(BaseModel):
-    task_id: int
+    task: str
 class UpdateRequest(BaseModel):
-    task_id: int
+    task: str
     is_done: bool
 class SendEmail(BaseModel):
     subject: str
     body: str
     to_email: str
+
+class Login(BaseModel):
+    username: str
+    password: str
